--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,26 @@
+# General
 DEBUG=false
 BACKUP_ENABLED=false
-BACKUP_INTERVAL_MINUTES=0
+BACKUP_INTERVAL_MINUTES=720
 BACKUP_CHANNEL_ID=""
 DISCORD_BOT_TOKEN=""
 CLIENT_ID=""
+
+# CFECT
 VERIFICATIONS_CHANNEL_ID=""
+DMS_CHANNEL_ID=""
 ALUVIAO_ROLE_ID=""
 VETERANO_ROLE_ID=""
-COMISSAO_DE_FAINA_ROLE_ID=""
-COMMANDS_GUILD_ID=""
+MESTRE_ROLE_ID=""
+CF_ROLE_ID=""
+MC_ROLE_ID=""
+CS_ST_ROLE_ID=""
+MS_ROLE_ID=""
+MP_ROLE_ID=""
+ME_ROLE_ID=""
+GUILD_ID=""
+
+# Firefly
+FIREFLY_API_URL=""
+FIREFLY_API_TOKEN=""
+FIREFLY_ACCOUNT_ID=""
